c/src/test/resources/syntax/bad/NoCascadeFunction.ctrl
<controlFile>
<sourceFile name="foo.c" id="1" />
<run>
  <startPosition fileId="1" line="1"/>
  <wayPoint fileId="1" line="1">
    <command>
      <argument>foo</argument>
    </command>
  </wayPoint>
  <endPosition fileId="1" line="1"/>
</run>
</controlFile>
